# learning-space

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json
coursera-courses/: .gitignore  README.md
coursera-courses/specialization-algorithms-data-structures/: README.md
coursera-courses/specialization-algorithms-data-structures/01-algorithmic-toolbox/: README.md
coursera-courses/specialization-algorithms-data-structures/01-algorithmic-toolbox/week-4/06-organizing-lottery/Project/: 06-organizing-lottery.cpp  CMakeLists.txt  Makefile
coursera-courses/specialization-the-art-of-development-in-modern-c++/: README.md
coursera-courses/specialization-the-art-of-development-in-modern-c++/1-white-belt/: README.md
coursera-courses/specialization-the-art-of-development-in-modern-c++/2-yellow-belt/: README.md
coursera-courses/specialization-the-art-of-development-in-modern-c++/3-red-belt/: README.md
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/: README.md
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-1/01.PriorityCollection/Solution/: CMakeLists.txt  priority_collection_2.cpp
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-1/02.HashSet/Solution/: CMakeLists.txt  hash_set.cpp  headers.h  test_runner.h
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-1/03.SetIteratorNext/Solution/: CMakeLists.txt  set_iterator_next.cpp
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-1/05.HashPerson/Solution/: CMakeLists.txt  hash_person.cpp
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-2/01.SpendingsXml/Solution/: CMakeLists.txt  spendings_xml.cpp  xml.cpp  xml.h
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-2/02.SpendingsJson/Solution/: CMakeLists.txt  spendings_json.cpp
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-2/05.Restructing/Solution/: CMakeLists.txt  main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-2/06.Collide/Solution/: CMakeLists.txt  collide.cpp  game_object.h  geo2d.cpp  geo2d.h
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-3/01.PrintStats/Solution/: CMakeLists.txt  print_stats_2.cpp
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-3/05.Polynomial/Solution/: CMakeLists.txt  polynomial.cpp
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-3/09.Expression/Solution/: CMakeLists.txt  main.cpp
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-5/04.TeamTasks/Solution/: CMakeLists.txt  team_tasks.cpp
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-5/10.BudgetProfessional/Solution/: CMakeLists.txt  budget.cpp  budget_system.cpp  budget_system.h  budget_test.cpp  budget_test.h  date.cpp  date.h
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-5/10.BudgetProfessional/Solution/OneFile/: budget.cpp
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-6/01.TransportA/Solution/GoodExample/: CMakeLists.txt  bus.cpp  bus.h  graph.h  json.cpp  json.h  json_parser.cpp  json_parser.h  router.h  stop_manager.cpp  stop_manager.h  transport_guide.cpp  transport_manager.cpp  transport_manager.h  transport_manager_command.h
coursera-courses/specialization-the-art-of-development-in-modern-c++/4-brown-belt/week-6/01.TransportA/Solution/GoodExample/tests/: CMakeLists.txt
stepik-courses/: README.md
stepik-courses/stepik-c++-multithread/: README.md
stepik-courses/stepik-c++-multithread/02-containers-smart-ptr/: CMakeLists.txt  README.md  build.sh  config.txt  configure.sh  main.cpp  run.sh
stepik-courses/stepik-c++-multithread/02-containers-smart-ptr/src/: token.cpp  token.hpp
stepik-courses/stepik-c++-multithread/02-containers-smart-ptr/tests/: CMakeLists.txt  tests.cpp
stepik-courses/stepik-introduction-to-programming-c++/: README.md
stepik-courses/stepik-introduction-to-programming-c++/1.10.strings-and-symbols/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp
stepik-courses/stepik-introduction-to-programming-c++/1.11.dictionaries-and-sets/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp
stepik-courses/stepik-introduction-to-programming-c++/1.12.stl-standard-algorithms/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
stepik-courses/stepik-introduction-to-programming-c++/1.3.integer-numbers/: task_1.cpp  task_10.cpp  task_11.cpp  task_12.cpp  task_13.cpp  task_14.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp
stepik-courses/stepik-introduction-to-programming-c++/1.4.conditional-operator/: task_1.cpp  task_10.cpp  task_11.cpp  task_12.cpp  task_13.cpp  task_14.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp
stepik-courses/stepik-introduction-to-programming-c++/1.5.while-loop/: task_1.cpp  task_10.cpp  task_11.cpp  task_12.cpp  task_13.cpp  task_14.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp
stepik-courses/stepik-introduction-to-programming-c++/1.6.real-numbers/: task_1.cpp  task_10.cpp  task_11.cpp  task_12.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp
stepik-courses/stepik-practice-python-math/: README.md
stepik-courses/stepik-programing-on-cpp/: README.md
stepik-courses/stepik-programing-on-python/: README.md
stepik-courses/stepik-python-basis-&-application/: README.md
stepik-courses/stepik-python-spbgu-bot/: README.md
(+1740 files in other folders)
